[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtva"
version = "0.1.0"
description = "Real-Time Voice Analyzer (Praat-based)"
authors = [{ name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "sounddevice",
  "soundfile",
  "pyqt6",
  "pyqtgraph",
  "librosa",
  "praat-parselmouth",
  "pandas",
  "pyarrow",
  "pydantic",
  "loguru",
  "pydub"
]

[project.optional-dependencies]
dev = ["pytest","pytest-cov","black","isort","flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rtva*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]
